# wolt-python-package-cookiecutter

./: .pre-commit-config.yaml  LICENCE  LICENSE  README.md  cookiecutter.json
.github/: .kacl.yml  CODEOWNERS
.github/workflows/: test.yml
tests/: context.yaml  test_project_generation.py
{{cookiecutter.project_slug}}/: .env.defaults  .pre-commit-config.yaml  .tool-versions  CHANGELOG.md  LICENCE  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  sample.envrc  setup.cfg
{{cookiecutter.project_slug}}/.github/: .kacl.yml  pull_request_template.md
{{cookiecutter.project_slug}}/.github/actions/python-poetry-env/: action.yml
{{cookiecutter.project_slug}}/.github/workflows/: cookiecutter.yml  dependencies.yml  draft_release.yml  release.yml  test.yml
{{cookiecutter.project_slug}}/docs/: api_docs.md  changelog.md  index.md  sources.md
{{cookiecutter.project_slug}}/tools/make/: Common.mk
{{cookiecutter.repository_name}}/: .gitignore  pre-commit-config.yaml
